--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,16 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
-  overflow: hidden;
   margin: 0px;
-  height: 100%;
 }
 
 body {
-  font-family: 'Lato', 'sans-serif'
-
+  font-family: 'Lato', 'sans-serif';
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+  color: #828c96;
 }
