--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,20 +1,38 @@
-html {
-  font-size: 62.5%;
-  box-sizing: border-box;
-  margin: 0px;
+@media screen and (min-width: 1px) {
+  html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+    margin: 0px;
+  }
+
+  body {
+    font-family: "Lato", "sans-serif";
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow-x: hidden;
+    color: #828c96;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  ul {
+  }
+  li {
+    margin: 0 auto;
+    list-style: none;
+    text-align: center;
+  }
 }
 
-body {
-  font-family: 'Lato', 'sans-serif';
-  margin: 0px;
-  padding: 0px;
-  height: 100%;
-  width: 100%;
-  position: relative;
-  overflow-x: hidden;
-  color: #828c96;
-}
-
-a {
-  text-decoration: none;
+@media (max-width: 500px) {
+  html {
+    font-size: 32.5%;
+    box-sizing: border-box;
+    margin: 0px;
+  }
 }
