created skill on about me

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
   }
 
   body {
-    font-family: "Lato", "sans-serif";
+    font-family: Roboto;
     margin: 0px;
     padding: 0px;
     height: 100%;
