--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@
 
   a {
     text-decoration: none;
+    color: #828c96;
   }
 
   ul {
@@ -29,7 +30,23 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
+  html {
+    font-size: 2vw;
+    box-sizing: border-box;
+    margin: 0px;
+  }
+}
+
+@media (min-width: 577px and max-width: 768px) {
+  html {
+    font-size: 32.5%;
+    box-sizing: border-box;
+    margin: 0px;
+  }
+}
+
+@media (min-width: 769px and max-width: 992px) {
   html {
     font-size: 32.5%;
     box-sizing: border-box;
